# C-Projects

./: CMakeLists.txt  README.md
DataStructures/: LinkedList.c  SinglyLinkedList.c  SinglyLinkedList.h
Introduction/: Introduction.c  Introduction.h
Main/: main.c
